fix: ajustes em métodos e endpoints
